Button flickering bug #7 Provider page UI improvements #8

--- a/src/_flag-icons.scss
+++ b/src/_flag-icons.scss
@@ -4,6 +4,4 @@
 .flag-icon {
   width: 24px;
   height: 24px;
-  background: url('app/components/assets/images/flag-icon-temp.svg') no-repeat center;
-  background-size: contain;
 }
