--- a/src/provider/pages/ProviderSettings/components/ConnectionInformation/ConnectionInformation.module.scss
+++ b/src/provider/pages/ProviderSettings/components/ConnectionInformation/ConnectionInformation.module.scss
@@ -4,6 +4,9 @@
   font-size: $buttonText;
   color: $textLightGrey;
 }
+.expansionPanelDetails {
+  padding-top: 16px !important;
+}
 .connectionFlexedRow {
   display: flex;
   margin-bottom: 16px;
